[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/InventorySlot.gd" type="Script" id=1]

[node name="InventorySlot" type="Panel"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 1 )

[node name="ItemTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
expand = true
stretch_mode = 6

[node name="QuantityLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -20.0
margin_right = -5.0
margin_bottom = -5.0
text = "1"
align = 2

[node name="QualityIndicator" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 15.0
margin_bottom = 15.0
color = Color( 1, 1, 1, 0.5 )